# auth-server

./: .env  .env.example  DEPLOY.md  alembic.ini  gen_ddl.py  oauth.js  pyproject.toml  schema.sql  test_hash.py  test_hash2.py  test_hash3.py
.github/workflows/: deploy.yml
alembic/: env.py
app/: config.py  dependencies.py  main.py  models.py  redis.py  schemas.py  security.py
app/routers/: clients.py  oauth2.py  users.py
app/templates/: authorize.html  base.html  index.html  login.html  register.html  register_client.html
tests/: conftest.py  test_oauth2.py
